crates/gridwell-writer-xlsx/tests/snapshots/snapshots__footnote-single.snap
---
source: crates/gridwell-writer-xlsx/tests/snapshots.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<worksheet xmlns="http://schemas.openxmlformats.org/spreadsheetml/2006/main">
<cols><col min="1" max="1" width="12.00" customWidth="1"/><col min="2" max="2" width="12.00" customWidth="1"/></cols>
<sheetData>
<row r="1"><c r="A1" t="inlineStr" s="1"><is><t xml:space="preserve">Name</t></is></c><c r="B1" t="inlineStr" s="1"><is><t xml:space="preserve">Score</t></is></c></row>
<row r="2"><c r="A2" t="inlineStr"><is><t xml:space="preserve">Alice</t></is></c><c r="B2" t="inlineStr"><is><r><rPr><sz val="11"/><rFont val="Calibri"/></rPr><t xml:space="preserve">90</t></r><r><rPr><sz val="11"/><rFont val="Calibri"/><vertAlign val="superscript"/></rPr><t xml:space="preserve">1</t></r></is></c></row>
<row r="3"><c r="A3" t="inlineStr"><is><t xml:space="preserve">Bob</t></is></c><c r="B3" t="inlineStr"><is><t xml:space="preserve">85</t></is></c></row>
<row r="5"><c r="A5" t="inlineStr"><is><r><rPr><sz val="11"/><rFont val="Calibri"/><vertAlign val="superscript"/></rPr><t xml:space="preserve">1</t></r><r><rPr><sz val="11"/><rFont val="Calibri"/></rPr><t xml:space="preserve"> </t></r><r><rPr><sz val="11"/><rFont val="Calibri"/></rPr><t xml:space="preserve">Includes bonus points.</t></r></is></c></row>
</sheetData>
</worksheet>
