crates/gridwell-writer-xlsx/tests/snapshots/snapshots__group-summary.snap
---
source: crates/gridwell-writer-xlsx/tests/snapshots.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<worksheet xmlns="http://schemas.openxmlformats.org/spreadsheetml/2006/main">
<cols><col min="1" max="1" width="12.00" customWidth="1"/><col min="2" max="2" width="12.00" customWidth="1"/></cols>
<sheetData>
<row r="1"><c r="A1" t="inlineStr" s="1"><is><t xml:space="preserve">Item</t></is></c><c r="B1" t="inlineStr" s="1"><is><t xml:space="preserve">Amount</t></is></c></row>
<row r="2"><c r="A2" t="inlineStr" s="1"><is><t xml:space="preserve">Q1</t></is></c></row>
<row r="3"><c r="A3" t="inlineStr"><is><t xml:space="preserve">Jan</t></is></c><c r="B3" t="inlineStr"><is><t xml:space="preserve">10</t></is></c></row>
<row r="4"><c r="A4" t="inlineStr"><is><t xml:space="preserve">Feb</t></is></c><c r="B4" t="inlineStr"><is><t xml:space="preserve">20</t></is></c></row>
<row r="5"><c r="A5" t="inlineStr" s="1"><is><t xml:space="preserve">Subtotal</t></is></c><c r="B5" t="inlineStr" s="1"><is><t xml:space="preserve">30</t></is></c></row>
<row r="6"><c r="A6" t="inlineStr" s="1"><is><t xml:space="preserve">Q2</t></is></c></row>
<row r="7"><c r="A7" t="inlineStr"><is><t xml:space="preserve">Apr</t></is></c><c r="B7" t="inlineStr"><is><t xml:space="preserve">15</t></is></c></row>
<row r="8"><c r="A8" t="inlineStr"><is><t xml:space="preserve">May</t></is></c><c r="B8" t="inlineStr"><is><t xml:space="preserve">25</t></is></c></row>
<row r="9"><c r="A9" t="inlineStr" s="1"><is><t xml:space="preserve">Subtotal</t></is></c><c r="B9" t="inlineStr" s="1"><is><t xml:space="preserve">40</t></is></c></row>
</sheetData>
<mergeCells count="2"><mergeCell ref="A2:B2"/><mergeCell ref="A6:B6"/></mergeCells>
</worksheet>
