crates/gridwell-writer-xlsx/tests/snapshots/snapshots__long-word-wrap.snap
---
source: crates/gridwell-writer-xlsx/tests/snapshots.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<worksheet xmlns="http://schemas.openxmlformats.org/spreadsheetml/2006/main">
<cols><col min="1" max="1" width="14.29" customWidth="1"/><col min="2" max="2" width="17.14" customWidth="1"/></cols>
<sheetData>
<row r="1"><c r="A1" t="inlineStr" s="1"><is><t xml:space="preserve">Label</t></is></c><c r="B1" t="inlineStr" s="1"><is><t xml:space="preserve">Token</t></is></c></row>
<row r="2"><c r="A2" t="inlineStr"><is><t xml:space="preserve">URL</t></is></c><c r="B2" t="inlineStr"><is><t xml:space="preserve">https://example.com/very/long/path/that/should/not/break/nicely?query=1</t></is></c></row>
</sheetData>
</worksheet>
